--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/javapoet-1.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/grizzly-core-2.3.28.jar"/>
+	<classpathentry kind="lib" path="lib/otto-1.3.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
