--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/javapoet-1.8.0.jar"/>
 	<classpathentry kind="lib" path="lib/grizzly-core-2.3.28.jar"/>
 	<classpathentry kind="lib" path="lib/otto-1.3.8.jar"/>
+	<classpathentry kind="lib" path="lib/minimal-json-0.9.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
