--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="lib/grizzly-core-2.3.28.jar"/>
 	<classpathentry kind="lib" path="lib/otto-1.3.8.jar"/>
 	<classpathentry kind="lib" path="lib/minimal-json-0.9.4.jar"/>
+	<classpathentry kind="lib" path="lib/kotlin-reflect.jar"/>
+	<classpathentry kind="lib" path="lib/kotlin-runtime.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
