--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="lib/minimal-json-0.9.4.jar"/>
 	<classpathentry kind="lib" path="lib/kotlin-reflect.jar"/>
 	<classpathentry kind="lib" path="lib/kotlin-runtime.jar"/>
+	<classpathentry kind="lib" path="lib/nanohttpd-2.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
