--- a/src-backseat/pt/lsts/httpd/manifest.json
+++ b/src-backseat/pt/lsts/httpd/manifest.json
@@ -2,6 +2,7 @@
   "short_name": "$$SHORTNAME$$",
   "name": "$$NAME$$",
   "display": "browser",
-  "background_color": "#2196F3",
+  "background_color": "#1589FF",
+  "theme_color": "#1589FF",
   "start_url": "/"
 }
