--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="lib/kotlin-reflect.jar"/>
 	<classpathentry kind="lib" path="lib/kotlin-runtime.jar"/>
 	<classpathentry kind="lib" path="lib/nanohttpd-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/xchart-3.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
