--- a/build.xml
+++ b/build.xml
@@ -175,7 +175,7 @@
 
         <copy file="ais.cache" todir="${dir.jarfile}/distress" overwrite="false" failonerror="no" />
 
-        <javac encoding="${compile-encoding}" srcdir="src;src-backseat" destdir="bin" includes="**/*.java" fork="false">
+        <javac encoding="${compile-encoding}" srcdir="src;src-endurance;src-backseat" destdir="bin" includes="**/*.java" fork="false">
             <classpath refid="classpath.dependencies"/>
         </javac>
         <copy todir="bin" overwrite="true">
